--- a/sect2/app/templates/base.html
+++ b/sect2/app/templates/base.html
@@ -22,8 +22,13 @@
         <li><a>Page 4</a></li>
       </ul>
 
+      <br>
+      hello and welcome. this is some generic content, see below the niche stuff
+
       <div>
         {% block content %}{% endblock %}
       </div>
+
+      <h2>and that's it folks!</h2>
     </body>
   </html>
