--- a/sect2/app/templates/calculator.html
+++ b/sect2/app/templates/calculator.html
@@ -14,6 +14,9 @@
     {{ form.hidden_tag() }}
     <p>
        {{ form.number1 }}<br>
+       {% for error in form.number1.errors%}
+       [{{ error }}] yeeeeah
+       {%endfor%}
     </p>
     <p>{{ form.number2 }}</p>
     <p><input type="submit" value="Calculate"></p>
