--- a/cw1/app/templates/base.html
+++ b/cw1/app/templates/base.html
@@ -12,17 +12,11 @@
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="expenses.html">Edit Expenses</a></li>
-            <li><a href="income.html">Edit Income</a></li>
-            <li><a href="goal.html">Edit Goal</a></li>
+            <li><a href="">Edit Expenses</a></li>
+            <li><a href="">Edit Income</a></li>
+            <li><a href="">Edit Goal</a></li>
         </ul>
     </nav>
-
-    <div><h2>Income</h2></div>
-
-    <div><h2>Expenses</h2></div>
-
-    <div><h2>Goal</h2>
     
     </div>
 </body>
