--- a/cw1/app/templates/base.html
+++ b/cw1/app/templates/base.html
@@ -3,21 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Budgeting 101</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename="styles.css")}}">
+    <title>{% block title %} {% endblock %}</title>
 </head>
 <body>
-    starting my coursework finally!!
-    <h1>Budgeting 101!</h1>
-    let's get your money right!
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="">Edit Expenses</a></li>
-            <li><a href="">Edit Income</a></li>
-            <li><a href="">Edit Goal</a></li>
-        </ul>
-    </nav>
+
+    <nav class="navbar navbar-expand-lg navnew">
+        <div class="container-fluid ">
+          <a class="navbar-brand" href="/">Budget Tracker</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse " id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item ">
+                <a class="nav-link" aria-current="page" href="/">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/expenditure">Expenditure</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/income">Income</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/goal">Goal</a>
+                <!---->
+              </li>
     
-    </div>
+            </ul>
+          </div>
+        </div>
+      </nav>
+      <br>
+
+    <main>{% block content%} {% endblock %}</main>
+
+    <footer>
+        COMP2011 - Made with love
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
 </body>
 </html>
