--- a/cw1/app/templates/expenses.html
+++ b/cw1/app/templates/expenses.html
@@ -4,35 +4,28 @@
 {% block content %}
 <h1>Expenditure</h1>
 <!--use to make objects. the database will reflect said objects-->
-
+<!--make this a reusable function set in another drive-->
 <table class="table">
     <thead>
       <tr>
         <th scope="col">#</th>
-        <th scope="col">First</th>
-        <th scope="col">Last</th>
-        <th scope="col">Handle</th>
+        <th scope="col">Description</th>
+        <th scope="col">Cost</th>
       </tr>
     </thead>
     <tbody>
-      <tr>
-        <th scope="row">1</th>
-        <td>Mark</td>
-        <td>Otto</td>
-        <td>@mdo</td>
-      </tr>
-      <tr>
-        <th scope="row">2</th>
-        <td>Jacob</td>
-        <td>Thornton</td>
-        <td>@fat</td>
-      </tr>
-      <tr>
-        <th scope="row">3</th>
-        <td colspan="2">Larry the Bird</td>
-        <td>@twitter</td>
-      </tr>
+      {% for obj in entries %}
+        <tr>
+          <th scope="row">{{obj.id}}</th>
+          <td>{{obj.desc}}</td>
+          <td>{{obj.cost}}</td>
+
+        </tr>
+      {% endfor %} 
     </tbody>
   </table>
+
+  <a href="/addval"><button type="button" class="btn btn-light">Add Expenses</button></a>
+
 
 {% endblock %}
