--- a/cw2/app/templates/base.html
+++ b/cw2/app/templates/base.html
@@ -30,7 +30,7 @@
                 <a class="nav-link navnew" href="/shop">MERCH</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link navnew" href="/shop">*admin*</a>
+                <a class="nav-link navnew" href="/admin">*admin*</a>
               </li>
     
             </ul>
