--- a/cw2/app/static/styles.css
+++ b/cw2/app/static/styles.css
@@ -4,7 +4,7 @@ html{
     margin: 0;
 }
 body{
-    background-color: #222222;
+    background-color: #131313;
     color: #ffffff;
     text-align: center;
     height: 100%;
@@ -16,13 +16,13 @@ this is perfect if you want to put the footer at the actual bottom
 */
 
 .navnew{
-    background-color: #222;
+    background-color: #131313;
     color: #ffffff;
-    font-style: ;
 }
- a:hover .navnew{
-    color: #ff83ff;
-}
+.navbar a:hover { 
+    color: rgb(255, 66, 158)
+    !important; }
+
 
 main{
     padding: 0 10px;
