--- a/cw2/app/templates/index.html
+++ b/cw2/app/templates/index.html
@@ -3,9 +3,24 @@
 
 {% block content %} 
 
-<h1>nxadesigns</h1>
-<p>by Marie Lartey</p><!--note that we need only one curly bracket to do inserts here-->
+<!--note that we need only one curly bracket to do inserts here-->
 
+<img src="/static/logo.png"width=90% alt="logo for nxadesigns, a graphic design brand. 
+Logo includes letters n x a d e s i g n s with pink stars and orbitals, in Arial serif font">
+<!--centre!-->
+<p>by Marie Lartey</p>
 
+<button><a href="/book-me">book me</a></button>
+<!--insert bootstrap classes-->
+<h1> about the creative </h1>
+
+Marie, also known as RHI, is a graphic designer. A creative genius if you will. Born and raised in London, she knew she
+was never destined for the life of a tech-fleece babe. Inspired by the "beauty" around her, she decided to develop
+her own aesthetic. Marie creates visual experiences, not just for the "girl boss CEOs" you see on Instagram. Her goal is
+to design and create visuals that inspire others to be their authentic selves. We hope her projects inspire you to create 
+<br>
+(or book her, that works too)
+<br>
+<button><a href="/portfolio">view portfolio</a></button>
 
 {% endblock %}
