--- a/cw2/app/templates/index.html
+++ b/cw2/app/templates/index.html
@@ -22,5 +22,6 @@ to design and create visuals that inspire others to be their authentic selves. W
 (or book her, that works too)
 <br>
 <button><a href="/portfolio">view portfolio</a></button>
+<img src="/static/imgme.jpeg" width="5%">
 
 {% endblock %}
