--- a/cw2/app/templates/port-corazon.html
+++ b/cw2/app/templates/port-corazon.html
@@ -2,9 +2,16 @@
 
 {% block title %} NXADESIGNS | Portfolio{% endblock %}
 
-{% block content %} 
+{% block content %}
 
-<h1> PORTFOLIO </h1>
+<h1> CORAZON </h1>
+Corazon is a concept for a Christian clothing brand. corazon is spanish for the word heart. The aesthetics of the brand
+are inspired by brutalism, streetwear.
+The verse that inpsired this verse was "1 corinrthians etc ettc"
+I think my favourite part of this project was the sketches. I'm a bit sad that when I started this project it was so
+excited and afterwards I got tired. I wish my desire to create was consistent and not limited by my capabilities in
+design
+sigh
 
 <ul>
     crzn project
