--- a/cw2/app/templates/base.html
+++ b/cw2/app/templates/base.html
@@ -10,27 +10,27 @@
 <body>
 
     <nav class="navbar navbar-expand-lg">
-        <div class="container-fluid ">
-          <a class="navbar-brand navnew" href="/">NXADESIGNS</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <div class="container-fluid navbar-custom">
+          <a class="navbar-brand " href="/">NXADESIGNS!</a>
+          <button class="navbar-toggler" style="background-color: #ffffff;" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse " id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item ">
-                <a class="nav-link navnew" aria-current="page" href="/">Home</a>
+                <a class="nav-link " aria-current="page" href="/">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link navnew" href="/portfolio">Portfolio</a>
+                <a class="nav-link " href="/portfolio">Portfolio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link navnew" href="/book-me">BOOK</a>
+                <a class="nav-link " href="/book-me">BOOK</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link navnew" href="/shop">MERCH</a>
+                <a class="nav-link " href="/shop">MERCH</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link navnew" href="/admin">*admin*</a>
+                <a class="nav-link " href="/admin">*admin*</a>
               </li>
     
             </ul>
