--- a/cw2/app/templates/index.html
+++ b/cw2/app/templates/index.html
@@ -5,23 +5,37 @@
 
 <!--note that we need only one curly bracket to do inserts here-->
 
-<img src="/static/logo.png"width=90% alt="logo for nxadesigns, a graphic design brand. 
-Logo includes letters n x a d e s i g n s with pink stars and orbitals, in Arial serif font">
-<!--centre!-->
-<p>by Marie Lartey</p>
-
-<button><a href="/book-me">book me</a></button>
+<div class="container-fluid">
+    <img class="space" src="/static/logo.png"width=90% alt="logo for nxadesigns, a graphic design brand.
+    Logo includes letters n x a d e s i g n s with pink stars and orbitals, in Arial serif font">
+    <!--centre!-->
+    <p>by Marie Lartey</p>
+    
+    <button class="btn  btn-light"><a href="/book-me">book me</a></button>
+</div>
+<hr>
 <!--insert bootstrap classes-->
-<h1> about the creative </h1>
-
-Marie, also known as RHI, is a graphic designer. A creative genius if you will. Born and raised in London, she knew she
-was never destined for the life of a tech-fleece babe. Inspired by the "beauty" around her, she decided to develop
-her own aesthetic. Marie creates visual experiences, not just for the "girl boss CEOs" you see on Instagram. Her goal is
-to design and create visuals that inspire others to be their authentic selves. We hope her projects inspire you to create 
-<br>
-(or book her, that works too)
-<br>
-<button><a href="/portfolio">view portfolio</a></button>
-<img src="/static/imgme.jpeg" width="5%">
+<div class="container">
+    <br>
+    <div class="row row-cols-2">
+      <div class="col">
+        <br>
+        <img src="/static/imgme.jpeg" width="200px">
+    </div>  
+    <div class="col">
+            <h1> About the Creative </h1>
+            
+            Marie, also known as RHI, is a graphic designer. A creative genius if you will. Born and raised in London, she knew she
+            was never destined for the life of a tech-fleece babe. Inspired by the "beauty" around her, she decided to develop
+            her own aesthetic. Marie creates visual experiences, not just for the "girl boss CEOs" you see on Instagram. Her goal is
+            to design and create visuals that inspire others to be their authentic selves. We hope her projects inspire you to create
+            <br>
+            (or book her, that works too)
+        </div>
+    </div>
+   <br> 
+        <button class="btn btn-light" ><a href="/portfolio">view portfolio</a></button>
+    </div>
+</div>
 
 {% endblock %}
