--- a/cw2/app/templates/portfolio.html
+++ b/cw2/app/templates/portfolio.html
@@ -7,14 +7,46 @@
 <h1> PORTFOLIO </h1>
 
 <ul>
-    <li>corazon</li>
-    corazon is  abrand design concept for a Christian streetwear brand. inspired by that one corinthians verse, this
-    project makes use of brutalism assets and takes up space. 
-    insert four images, multi page implementation
-    <li>so you click to select here and it takes you to a suggested portfolio example</li>
-    <br> <b>this is not essential to be fair, it's not marked fr, forcus on shop</b>
-    <li>ihtb</li>
-    <li>AB Studio</li>
+    <div class="row row-cols-1 row-cols-md-3 g-4">
+        <!--G IS FOR GUTTER, GUTTER AS IN SPACE-->
+        <div class="col">
+          <a href="/port-miakrylics">
+              <div class="card">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">MIAKRYLICS</h5>
+                  <p class="card-text">
+                    I would love to lie and say this was my first project ever. It wasn't, but it was really interesting. Click here to check it out
+                  </p>
+                </div>
+              </div>
+          </a>
+          <i>MIAKRYLICS</i>
+        </div>
+        <div class="col">
+          <a href="/port-corazon">
+              <div class="card">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">CORAZON</h5>
+                </div>
+              </div>
+          </a>
+          <i>CORAZON</i>
+        </div>
+        <div class="col">
+          <a href="/port-abstudio">
+              <div class="card">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">ABSTUDIO</h5>
+                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                </div>
+              </div>
+          </a>
+          <i>ABSTUDIO</i>
+        </div>
+      </div>
 
 </ul>
 {%endblock%}
