--- a/cw2/app/templates/admin.html
+++ b/cw2/app/templates/admin.html
@@ -10,15 +10,13 @@
     <li>enter username and password to enter site</li>
     <li>takes you to database of orders</li>
     <li>this will include the details from the form - date, name and contact</li>
+<form action="" method="get">
+   enter password <br>
+  <input type="password">
+  <br>
+  <input type="submit">
+</form>
 
-    <div class="mb-3">
-        <label for="exampleFormControlInput1" class="form-label">Email address</label>
-        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-      </div>
-      <div class="mb-3">
-        <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
-        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-      </div>
 </ul>
 
 
