--- a/cw2/app/templates/book-confirmation.html
+++ b/cw2/app/templates/book-confirmation.html
@@ -4,8 +4,10 @@
 
 {% block content %} 
 
-<h1> BOOKING CONFIRMED </h1>
+<h1> Thank you for booking! </h1>
 
-you will be emailed shortly
+We will be in touch shortly! Much love 
 
+<img src="static/logo.png" width=200px ="">
+<button>HOME</button>
 {%endblock%}
