--- a/cw2/app/templates/shop.html
+++ b/cw2/app/templates/shop.html
@@ -2,11 +2,87 @@
 
 {% block title %} NXADESIGNS | Shop {% endblock %}
 
-{% block content %} 
+{% block content %}
 
 <h1> SHOP </h1>
 corazon hoodies - £35
 posters - £10
 brand consultation - £50
+<div class="row row-cols-1 row-cols-md-3 g-4">
+    <!--G IS FOR GUTTER, GUTTER AS IN SPACE-->
+    <div class="col">
+        <a href="/port-miakrylics">
+            <div class="card">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">corazon hoodie 1 - £40</h5>
+                    <p class="card-text">
+                    </p>
+                </div>
+            </div>
+        </a> <i>add to basket</i>
+    </div>
+    <div class="col">
+        <a href="/port-corazon">
+            <div class="card">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">CORAZON hoodie 2 - 40£</h5>
+                </div>
+            </div>
+        </a> <i>add to basket</i>
 
+    </div>
+    <div class="col">
+        <a href="/port-abstudio">
+            <div class="card">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">corazon hoodie 3 - £40</h5>
+                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
+                        additional content.</p>
+                </div>
+            </div>
+        </a>
+        <i>add to basket</i>
+    </div>
+    <div class="col">
+        <a href="/port-abstudio">
+            <div class="card">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">poster 1 - £40</h5>
+                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
+                        additional content.</p>
+                </div>
+            </div>
+        </a>
+        <i>add to basket</i>
+    </div>
+    <div class="col">
+        <a href="/port-abstudio">
+            <div class="card">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">poster 2</h5>
+                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
+                        additional content.</p>
+                </div>
+            </div>
+        </a> <i>add to basket</i>
+    </div>
+    <div class="col">
+        <a href="/port-abstudio">
+            <div class="card">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">poster 3</h5>
+                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
+                        additional content.</p>
+                </div>
+            </div>
+        </a>
+        <i>add to basket</i>
+    </div>
+</div>
 {%endblock%}
