--- a/cw2/app/templates/admin.html
+++ b/cw2/app/templates/admin.html
@@ -6,19 +6,14 @@
 
 <h1> ADMIN </h1>
 
-<ul>
-    <li>enter username and password to enter site</li>
-    <li>takes you to database of orders</li>
-    <li>this will include the details from the form - date, name and contact</li>
-<form action="" method="get">
-   enter password <br>
+
+<form action="/admin-view" method="get">
+   enter password 
+   <br>
   <input type="password">
-  <br>
-  <input type="submit">
+  <br> <br>
+  <input type="submit" class="btn btn-outline-light">
 </form>
-
-</ul>
-
 
 
 {%endblock%}
