--- a/cw2/app/templates/book-confirmation.html
+++ b/cw2/app/templates/book-confirmation.html
@@ -7,7 +7,8 @@
 <h1> Thank you for booking! </h1>
 
 We will be in touch shortly! Much love 
-
+<br>
 <img src="static/logo.png" width=200px ="">
-<button>HOME</button>
+<br>
+<button>home</button>
 {%endblock%}
