--- a/cw2/app/templates/book.html
+++ b/cw2/app/templates/book.html
@@ -6,7 +6,7 @@
 
 <h1> BOOK </h1>
 <div class="form">
-<form action="/book-confirmation.html" method="get">
+<form action="/book-conf" method="get">
 
     Name <br>
     <input type="text"> <br>
@@ -24,7 +24,14 @@ Any comments or concerns? <br><input type="submit" value = "Book Me">
 <textarea name="paragraph_text" cols="50" rows="10"></textarea>
 <br>
 </form>
+<!--Hey, enter name
+    Thank you for booking me! I really appreciate it, I will process
+    your order and get in touch with you soon
 
+    Besitos!
+
+    Marie | NXADESIGNS
+-->
 </div>
 
 {%endblock%}
