--- a/cw2/app/templates/index.html
+++ b/cw2/app/templates/index.html
@@ -1,41 +1,64 @@
 {%extends "base.html"%}
 {% block title %} NXADESIGNS | Home {% endblock %}
 
-{% block content %} 
+{% block content %}
 
 <!--note that we need only one curly bracket to do inserts here-->
 
-<div class="container-fluid">
-    <img class="space" src="/static/logo.png"width=90% alt="logo for nxadesigns, a graphic design brand.
-    Logo includes letters n x a d e s i g n s with pink stars and orbitals, in Arial serif font">
-    <!--centre!-->
-    <p>by Marie Lartey</p>
-    
-    <button class="btn  btn-light"><a href="/book-me">book me</a></button>
-</div>
-<hr>
-<!--insert bootstrap classes-->
-<div class="container">
-    <br>
-    <div class="row row-cols-2">
-      <div class="col">
-        <br>
-        <img src="/static/imgme.jpeg" width="200px">
-    </div>  
-    <div class="col">
-            <h1> About the Creative </h1>
-            
-            Marie, also known as RHI, is a graphic designer. A creative genius if you will. Born and raised in London, she knew she
-            was never destined for the life of a tech-fleece babe. Inspired by the "beauty" around her, she decided to develop
-            her own aesthetic. Marie creates visual experiences, not just for the "girl boss CEOs" you see on Instagram. Her goal is
-            to design and create visuals that inspire others to be their authentic selves. We hope her projects inspire you to create
-            <br>
-            (or book her, that works too)
+<div class="container-fluid px-5">
+    <div class="row">
+        <div class="col-md-5">
+
+            <!--centre!-->
+            <p><i>visuals for your vision</i></p>
+            <a class="btn btn-outline-light" href="/book-me">book me</a>
         </div>
+
+
+        <div class="col-md-7">
+            <div class="row">
+                <img class="space" src="/static/logo.png" width=90% alt="logo for nxadesigns, a graphic design brand.
+            Logo includes letters n x a d e s i g n s with pink stars and orbitals, in Arial serif font">
+            </div>
+
+            <div class="row">
+
+                <div class="col-sm-4">
+                    <br>
+                    <img src="/static/imgme.jpeg" width="200px" style="border-radius: 20px; border: 2px solid #ffffff;">
+                </div>
+                <div class="col-sm-8 p-30">
+                    <h1> About the Creative </h1>
+                    <div style="text-align: left;">
+                        Marie, also known as <i>RHI</i>, is a graphic designer. A creative genius if you will. Born
+                        and raised in London, she knew she was never destined for the life of a tech-fleece babe.
+                        Inspired by the "beauty" around her, she decided to
+                        develop her own aesthetic. Marie creates visual experiences, not just for the "girl boss
+                        CEOs" you see on Instagram. Her goal is to design and create visuals that inspire others to
+                        be their authentic selves.
+                        We hope her projects inspire you to create
+                    <br>
+                    (or book her, that works too)
+               <div class="w-20 text-right p-3">
+                        <a href="/portfolio" class="btn btn-outline-light">view portfolio</a>
+                    </div> 
+                </div>
+     
+
+                    
+                </div>
+                <br>
+
+
+            </div>
+
+        </div>
+
+
     </div>
-   <br> 
-        <button class="btn btn-light" ><a href="/portfolio">view portfolio</a></button>
-    </div>
+
 </div>
+<!--insert bootstrap classes-->
+
 
 {% endblock %}
