--- a/cw2/app/templates/portfolio.html
+++ b/cw2/app/templates/portfolio.html
@@ -6,45 +6,47 @@
 
 <h1> PORTFOLIO </h1>
 
-    <div class="row row-cols-1 row-cols-md-3 g-4">
-        <!--G IS FOR GUTTER, GUTTER AS IN SPACE-->
-        <div class="col">
-          <a href="/port-miakrylics">
-              <div class="card">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">MIAKRYLICS</h5>
-                  <p class="card-text">
-                    I would love to lie and say this was my first project ever. It wasn't, but it was really interesting. Click here to check it out
-                  </p>
+    <div class="container">
+      <div class="row row-cols-1 row-cols-md-3 g-4">
+          <!--G IS FOR GUTTER, GUTTER AS IN SPACE-->
+          <div class="col">
+            <a href="/port-miakrylics">
+                <div class="card">
+                  <img src="..." class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">MIAKRYLICS</h5>
+                    <p class="card-text">
+                      I would love to lie and say this was my first project ever. It wasn't, but it was really interesting. Click here to check it out
+                    </p>
+                  </div>
                 </div>
-              </div>
-          </a>
-          <i>MIAKRYLICS</i>
-        </div>
-        <div class="col">
-          <a href="/port-corazon">
-              <div class="card">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">CORAZON</h5>
+            </a>
+            <i>MIAKRYLICS</i>
+          </div>
+          <div class="col">
+            <a href="/port-corazon">
+                <div class="card">
+                  <img src="..." class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">CORAZON</h5>
+                  </div>
                 </div>
-              </div>
-          </a>
-          <i>CORAZON</i>
-        </div>
-        <div class="col">
-          <a href="/port-abstudio">
-              <div class="card">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">ABSTUDIO</h5>
-                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+            </a>
+            <i>CORAZON</i>
+          </div>
+          <div class="col">
+            <a href="/port-abstudio">
+                <div class="card">
+                  <img src="..." class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">ABSTUDIO</h5>
+                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                  </div>
                 </div>
-              </div>
-          </a>
-          <i>ABSTUDIO</i>
+            </a>
+            <i>ABSTUDIO</i>
+          </div>
         </div>
-      </div>
+    </div>
 
 {%endblock%}
