--- a/cw2/app/static/styles.css
+++ b/cw2/app/static/styles.css
@@ -1,5 +1,5 @@
 html{
-    height: 100%;
+    height: 100vh;
     width: 100%;
     margin: 0;
 }
@@ -9,7 +9,8 @@ body{
     text-align: center;
     height: 100%;
     width: 100%;
-}
+    font-family: monospace;
+    padding: 0;}
 /*
 put html at 100% and body at 100% so that you take up the full page
 this is perfect if you want to put the footer at the actual bottom
@@ -26,30 +27,32 @@ this is perfect if you want to put the footer at the actual bottom
 
 
 main{
-    padding: 0 10px;
-    height: 100%;
+    position: relative;
+    padding: 0 0px;
+    height: 85vh;
+    width: 100%;
+
 }
 /*so text doesn't hit the ends of the page*/
 .space{
-    margin-bottom:150px ;
+    margin-bottom:50px ;
     margin-top: 50px;
 }
 
 footer{
-    position: relative  ;
+    position: relative;
     bottom: 0;
-    padding: 10px;
     background-color: #ffffff;
+    padding: 10px;
     color: #303030;
     width: 100%;
+    height: 3rem;
     text-align: center;
+    margin: 0px;
 }
+
 
 /*very useful footer here*/
-
-.giant{
-    font-size: 100px;
-}
 
 .resize{
     width: 100%; /* width of container */
