--- a/cw2/app/templates/base.html
+++ b/cw2/app/templates/base.html
@@ -1,56 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename="styles.css")}}">
-    <title>{% block title %} {% endblock %}</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename="styles.css")}}">
+  <title>{% block title %} {% endblock %}</title>
 </head>
+
 <body>
 
-    <nav class="navbar navbar-expand-lg">
-        <div class="container-fluid navbar-custom">
-          <a class="navbar-brand " href="/">NXADESIGNS!</a>
-          <button class="navbar-toggler" style="background-color: #ffffff;" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse " id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item ">
-                <a class="nav-link " aria-current="page" href="/">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link " href="/portfolio">Portfolio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link " href="/book-me">BOOK</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link " href="/shop">MERCH</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link " href="/admin">*admin*</a>
-              </li>
-    
-            </ul>
-          </div>
-        </div>
-      </nav>
-      <br>
+  <nav class="navbar navbar-expand-lg">
+    <div class="container-fluid navbar-custom">
+      <a class="navbar-brand " href="/">NXADESIGNS!</a>
+      <button class="navbar-toggler" style="background-color: #ffffff;" type="button" data-bs-toggle="collapse"
+        data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse " id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item ">
+            <a class="nav-link " aria-current="page" href="/">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link " href="/portfolio">Portfolio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link " href="/book-me">BOOK</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link " href="/shop">MERCH</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link " href="/admin">*admin*</a>
+          </li>
 
-    <main>{% block content%} {% endblock %}</main>
+        </ul>
+      </div>
+    </div>
+  </nav>  <hr>
 
-    <footer>
-        Instagram - <a href="https://www.instagram.com/nxadesigns/"><b>@nxadesigns</b></a>
-        <br>
-        Email - <a href="mailto:nxadesigns1@gmail.com"> <b>nxadesigns1@gmail.com</b> </a>
-        <br>
-        <i style="  font-variant: small-caps;
-        ">book me for clear skin!</i>
-    </footer>
+  <main>{% block content%} 
+    {% endblock %}
+  </main>
+  
+  <footer>
+    insta - <a href="https://www.instagram.com/nxadesigns/"><b>@nxadesigns</b></a>
+    email - <a href="mailto:nxadesigns1@gmail.com"> <b>nxadesigns1@gmail.com</b> </a>
+    <br>
+  </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+    integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+    crossorigin="anonymous"></script>
 </body>
+<!--book me for clear skin-->
 </html>
