--- a/cw2/app/templates/admin-view.html
+++ b/cw2/app/templates/admin-view.html
@@ -2,23 +2,61 @@
 
 {% block title %} ADMIN {% endblock %}
 
-{% block content %} 
+{% block content %}
 
 <h1> ADMIN </h1>
 
-should we make a filter for freelance and orders
-<br>
-//these should be objects, orm tings
+<!--insert head tags and assign the scopes -->
 
-<table>
-  <th>hm</th>
-number
-name
-email
-cost
-commentary
-date
-</table>
+<div class="container">
+  <table class="table align-middle">
+    <thead>
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">Date</th>
+        <th scope="col">Name</th>
+        <th scope="col">Email</th>
+        <th scope="col">Brandname</th>
+        <th scope="col">Service Request</th>
+        <th scope="col">Extra Comments</th>
+
+
+
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <th scope="row">1</th>
+        <td>1/1/2023</td>
+        <td>Jenelle</td>
+        <td>shesnotreal@gmail.com</td>
+        <td>HairbyJ</td>
+        <td>Logo, Business Cards</td>
+        <td>Must be pink by force</td>
+
+
+      </tr>
+      <tr>
+        <th scope="row">2</th>
+        <td>Jacob</td>
+        <td>Thornton</td>
+        <td>n345@hotmail.com</td>
+        <td>HairbyK</td>
+        <td>Business Cards</td>
+        <td>Suprise</td>
+      </tr>
+      <tr>
+        <th scope="row">3</th>
+        <td>Larry June</td>
+        <td>Lojay@leeds.ac.uk</td>
+        <td>HLarry June</td>
+        <td>no</td>
+        <td>noo</td>
+        <td>no</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
 
 
 {%endblock%}
