--- a/cw2/app/templates/admin.html
+++ b/cw2/app/templates/admin.html
@@ -6,7 +6,8 @@
 
 <h1> ADMIN </h1>
 
-
+<img src="/static/incog.png" alt="incognito icon, but feminine and pink. Image consists of two pink circles on top of eachother with a gap between.
+There are stars surrounding the icon, and rings at the top of the circle" class="img w-5">
 <form action="/admin-view" method="get">
    enter password 
    <br>
