--- a/cw2/app/templates/index.html
+++ b/cw2/app/templates/index.html
@@ -25,7 +25,7 @@
 
                 <div class="col-sm-4">
                     <br>
-                    <img src="/static/imgme.jpeg" width="200px" style="border-radius: 20px; border: 2px solid #ffffff;">
+                    <img src="/static/imgme.jpeg" width="200px" style="border: 2px solid #ffffff;">
                 </div>
                 <div class="col-sm-8 p-30">
                     <h1> About the Creative </h1>
