--- a/cw2/app/templates/shop.html
+++ b/cw2/app/templates/shop.html
@@ -11,7 +11,7 @@
         <div class="col">
             <a href="/port-miakrylics">
                 <div class="card">
-                    <img src="..." class="card-img-top" alt="...">
+                    <img src="/static/crzn/hoodie01.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">corazon hoodie 1 - £40</h5>
                         <p class="card-text">
@@ -23,7 +23,7 @@
         <div class="col">
             <a href="/port-corazon">
                 <div class="card">
-                    <img src="..." class="card-img-top" alt="...">
+                    <img src="/static/crzn/hoodie02.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">CORAZON hoodie 2 - 40£</h5>
                     </div>
@@ -34,7 +34,7 @@
         <div class="col">
             <a href="/port-abstudio">
                 <div class="card">
-                    <img src="..." class="card-img-top" alt="...">
+                    <img src="static/crzn/tee03.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">corazon Tee 3 - £40</h5>
                         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
@@ -47,7 +47,7 @@
         <div class="col">
             <a href="/port-abstudio">
                 <div class="card">
-                    <img src="..." class="card-img-top" alt="...">
+                    <img src="/static/mandala.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">poster 1 - £40</h5>
                         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
@@ -60,7 +60,7 @@
         <div class="col">
             <a href="/port-abstudio">
                 <div class="card">
-                    <img src="..." class="card-img-top" alt="...">
+                    <img src="static/brwn.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">poster 2</h5>
                         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
@@ -72,7 +72,7 @@
         <div class="col">
             <a href="/port-abstudio">
                 <div class="card">
-                    <img src="..." class="card-img-top" alt="...">
+                    <img src="/static/union.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">poster 3</h5>
                         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
